    without 'else' are deprecated.
  - Recursive tuple types are not allowed anymore. Use ``object`` instead.
  - The PEGS module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The re module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The "symmetric set difference" operator (``-+-``) never worked and has been
    removed.

  Language Additions
  ------------------

  - The new concurrency model has been implemented including ``locks`` sections,
    lock levels and object field ``guards``.
  - The ``parallel`` statement has been implemented.
  - ``deepCopy`` has been added to the language.
  - The builtin ``procCall`` can be used to get ``super``-like functionality
    for multi methods.


  Compiler Additions
  ------------------

  - The compiler now supports *mixed* Objective C / C++ / C code generation:
    The modules that use ``importCpp`` or ``importObjc`` are compiled to C++
    or Objective C code, any other module is compiled to C code. This
    improves interoperability.
  - There is a new ``parallel`` statement for safe fork&join parallel computing.
  - ``guard`` and ``lock`` pragmas have been implemented to support safer
    concurrent programming.
  - The following procs are now available at compile-time::

      math.sqrt, math.ln, math.log10, math.log2, math.exp, math.round,
      math.arccos, math.arcsin, math.arctan, math.arctan2, math.cos, math.cosh,
      math.hypot, math.sinh, math.sin, math.tan, math.tanh, math.pow,
      math.trunc, math.floor, math.ceil, math.fmod,
      os.getEnv, os.existsEnv, os.dirExists, os.fileExists,
      system.writeFile

  - Two backticks now produce a single backtick within an ``emit`` or ``asm``
    statement.
  - There is a new tool, `nimfix <nimfix.html>`_ to help you in updating your
    code from Nimrod to Nim.
  

  Library Additions
  -----------------

  - Added module ``fenv`` to control the handling of floating-point rounding and